tags/0.1/src/objects/DiscussionForum__c.object
<CustomObject>
    <fields>
        <fullName>LastPostedMessage__c</fullName>
        <label>LastPostedMessage</label>
        <referenceTo>DiscussionMessage__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MessageCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MessageCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipName>Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TopicCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TopicCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ViewCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ViewCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discussion</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Forum Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discussions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>